salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/EPIC_Settings__mdt.object-meta.xml
<CustomObject>
    <label>EPIC Settings</label>
    <pluralLabel>EPIC Settings</pluralLabel>
</CustomObject>