salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/fields/AUD__c.field-meta.xml
<CustomField>
    <fullName>AUD__c</fullName>
    <label>AUD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>