salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/fields/Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Cert_Name__c</fullName>
    <label>Cert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>