salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/fields/ISS__c.field-meta.xml
<CustomField>
    <fullName>ISS__c</fullName>
    <label>ISS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>