salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/fields/JTI__c.field-meta.xml
<CustomField>
    <fullName>JTI__c</fullName>
    <label>JTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>