salesforce_sfdx/main/default/objects/EPIC_Settings__mdt/fields/SUB__c.field-meta.xml
<CustomField>
    <fullName>SUB__c</fullName>
    <label>SUB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>